# nazar

./: .gitignore  Cargo.toml  README.md
.github/workflows/: code-coverage.yml
src/: lib.rs  main.rs  rule_config.rs  rule_parser.rs  test_macros.rs  utils.rs
src/rule_config/: custom.rs  structs.rs
src/rule_config/custom/: dns_rule.rs  udp_rule.rs
src/rule_config/rules/: icmp_rule.rs
src/rule_parser/: rules.rs
src/rule_parser/rules/: dns_rule.rs  http_rule.rs  icmp_rule.rs  tcp_rule.rs  udp_rule.rs
tests/: cli.rs  integration_test.rs  utils.rs
