[package]
name = "nazar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
log = "0.4.19"
log4rs = { version = "1.2.0", features = ["gzip"] }
pnet = "0.33.0"
serde = {version = "1.0.167", features = ["derive"]}
toml = "0.7.6"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"
