[package]
name = "nazar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.12", features = ["derive"] }
dns-parser = "0.8.0"
etherparse = "0.13.0"
httparse = "1.8.0"
log = "0.4.19"
log4rs = { version = "1.2.0", features = ["gzip"] }
pnet = "0.33.0"
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.103"
serde_yaml = "0.9.23"
toml = "0.7.6"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
assert_fs = "1.0.13"
cargo-tarpaulin = "0.26.1"

[package.metadata.tarpaulin]
exclude = ["tests/*", "benches/*", "src/main.rs"]
